apenas reformatação visual

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -243,7 +243,7 @@
     "sns.set_theme(\"paper\")\n",
     "sns.set_style(\"darkgrid\")\n",
     "\n",
-    "plt.figure(figsize=(20,6))\n",
+    "plt.figure(figsize=(20, 6))\n",
     "\n",
     "sns.lineplot(\n",
     "    data=df,\n",
