--- a/notebooks/03_modelo_preditivo.ipynb
+++ b/notebooks/03_modelo_preditivo.ipynb
@@ -13,18 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import joblib\n",
-    "\n",
-    "from src.utils import get_path_projeto\n",
-    "\n",
     "import pickle\n",
+    "\n",
     "import joblib\n",
     "from matplotlib import pyplot as plt\n",
+    "from sklearn.dummy import DummyRegressor\n",
     "from sklearn.metrics import root_mean_squared_error\n",
     "from sklearn.svm import SVR\n",
-    "from sklearn.dummy import DummyRegressor"
+    "\n",
+    "from src.utils import get_path_projeto"
    ]
   },
   {
@@ -526,7 +523,7 @@
     }
    ],
    "source": [
-    "y_pred = model.predict(X_test).reshape(-1,1)\n",
+    "y_pred = model.predict(X_test).reshape(-1, 1)\n",
     "\n",
     "rmse = root_mean_squared_error(\n",
     "    scaler.inverse_transform(y_pred),\n",
@@ -553,7 +550,7 @@
     "dummy_regressor = DummyRegressor()\n",
     "dummy_regressor.fit(X_train, y_train)\n",
     "\n",
-    "y_pred = dummy_regressor.predict(X_test).reshape(-1,1)\n",
+    "y_pred = dummy_regressor.predict(X_test).reshape(-1, 1)\n",
     "\n",
     "rmse_dummy = root_mean_squared_error(\n",
     "    scaler.inverse_transform(y_pred),\n",
@@ -597,7 +594,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
     "sns.set_theme(\"talk\")\n",
