--- a/archive/modelo_preditivo copy.ipynb
+++ b/archive/modelo_preditivo copy.ipynb
@@ -7,11 +7,12 @@
    "outputs": [],
    "source": [
     "# Bibliotecas\n",
+    "import pickle\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "import pickle\n",
     "\n",
     "from src.utils import get_path_projeto\n",
     "\n",
@@ -45,13 +46,13 @@
     "wind_power_generation_scaled_values = scaler.fit_transform(wind_power_generation_values.reshape(-1, 1)).ravel()\n",
     "\n",
     "# 5. Criando os dados de \"features\" e \"target\"\n",
-    "window_len = 6 # Número de pontos que existem por meia hora\n",
+    "window_len = 6  # Número de pontos que existem por meia hora\n",
     "X = []\n",
     "y = []\n",
     "\n",
     "for i in range(len(wind_power_generation_scaled_values) - window_len):\n",
-    "    X.append(wind_power_generation_scaled_values[i:i+window_len])\n",
-    "    y.append(wind_power_generation_scaled_values[i+window_len])\n",
+    "    X.append(wind_power_generation_scaled_values[i:i + window_len])\n",
+    "    y.append(wind_power_generation_scaled_values[i + window_len])\n",
     "\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
@@ -106,7 +107,6 @@
     "    inplace=True\n",
     ")\n",
     "\n",
-    "#\n",
     "wind_power_generation_values = wind_power_generation[\"power_generation\"].values\n",
     "\n",
     "# # Número de observações\n",
@@ -141,8 +141,8 @@
     "# y.append(half_hour_mean[i+window_len])\n",
     "\n",
     "for i in range(len(wind_power_generation_scaled_values) - window_len):\n",
-    "    X.append(wind_power_generation_scaled_values[i:i+window_len])\n",
-    "    y.append(wind_power_generation_scaled_values[i+window_len])\n",
+    "    X.append(wind_power_generation_scaled_values[i:i + window_len])\n",
+    "    y.append(wind_power_generation_scaled_values[i + window_len])\n",
     "\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
@@ -202,7 +202,7 @@
     "y_pred = model.predict(X_test)\n",
     "rmse = root_mean_squared_error(\n",
     "    scaler.inverse_transform(y_pred.reshape(-1, 1)),\n",
-    "    scaler.inverse_transform(y_test.reshape(-1,1))\n",
+    "    scaler.inverse_transform(y_test.reshape(-1, 1))\n",
     ")\n",
     "print(f\"{rmse=}\")"
    ]
@@ -286,7 +286,7 @@
    ],
    "source": [
     "model.predict(\n",
-    "    np.array([0.44836393, 0.45411014, 0.45522745, 0.45889864, 0.46177175, 0.46560255]).reshape(1,6)\n",
+    "    np.array([0.44836393, 0.45411014, 0.45522745, 0.45889864, 0.46177175, 0.46560255]).reshape(1, 6)\n",
     ")"
    ]
   },
@@ -1488,8 +1488,6 @@
     }
    ],
    "source": [
-    "import joblib\n",
-    "from matplotlib import pyplot as plt\n",
     "from sklearn.metrics import root_mean_squared_error\n",
     "from sklearn.svm import SVR\n",
     "\n",
