--- a/archive/temp copy.ipynb
+++ b/archive/temp copy.ipynb
@@ -6,14 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.optim import Adam\n",
-    "from torch import nn\n",
-    "from torch.utils.data import DataLoader, TensorDataset\n",
-    "import torch\n",
-    "import yaml\n",
-    "import pandas as pd\n",
     "from time import time\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.optim import Adam\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "\n",
     "from src.utils import get_path_projeto"
    ]
   },
@@ -196,17 +197,16 @@
    "source": [
     "import pandas as pd\n",
     "import torch\n",
-    "import torch.nn as nn\n",
+    "from torch import nn\n",
     "from torch.optim import Adam\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
-    "import numpy as np\n",
-    "from time import time\n",
+    "\n",
     "from src.utils import get_path_projeto\n",
     "\n",
     "dir_projeto = get_path_projeto()\n",
     "\n",
     "# 1. Set device\n",
-    "device = \"cpu\"# torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = \"cpu\"  # torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
     "# 2. Load data and prepare it as usual\n",
@@ -303,7 +303,7 @@
     "\n",
     "\n",
     "# Start training\n",
-    "num_epochs = 250#2_000\n",
+    "num_epochs = 250  # 2_000\n",
     "rede_neural = rotina_treino(\n",
     "    modelo=rede_neural,\n",
     "    fn_perda=loss_fn,\n",
@@ -351,20 +351,19 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "import pandas as pd\n",
     "import torch\n",
-    "import torch.nn as nn\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from torch import nn\n",
     "from torch.optim import Adam\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
-    "import numpy as np\n",
-    "from time import time\n",
+    "\n",
     "from src.utils import get_path_projeto\n",
     "\n",
     "dir_projeto = get_path_projeto()\n",
     "\n",
     "# 1. Set device\n",
-    "device = \"cpu\"# torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = \"cpu\"  # torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
     "# 2. Load data and prepare it as usual\n",
@@ -379,6 +378,7 @@
     "\n",
     "scaler = MinMaxScaler()\n",
     "dados_normalizados = scaler.fit_transform(wind_power_generation[[\"power_generation\"]])\n",
+    "\n",
     "\n",
     "# 3. Modify the create_dataset function to use the device\n",
     "def create_dataset(dataset, lookback):\n",
@@ -404,6 +404,7 @@
     "    dataset=dados_normalizados, lookback=lookback\n",
     ")\n",
     "\n",
+    "\n",
     "# 4. Update the model to use the device\n",
     "class ArquiteturaRedeNeural(nn.Module):\n",
     "    def __init__(self, lookback) -> None:\n",
@@ -417,6 +418,7 @@
     "        x, _ = self.lstm(x)\n",
     "        x = self.linear(x)\n",
     "        return x\n",
+    "\n",
     "\n",
     "# Move model to the device\n",
     "rede_neural = ArquiteturaRedeNeural(lookback=lookback).to(device)\n",
@@ -461,7 +463,7 @@
     "\n",
     "\n",
     "# Start training\n",
-    "num_epochs = 250#2_000\n",
+    "num_epochs = 250  # 2_000\n",
     "rede_neural = rotina_treino(\n",
     "    modelo=rede_neural,\n",
     "    fn_perda=loss_fn,\n",
@@ -497,7 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yyyy = scaler.inverse_transform(y_pred_numpy.reshape(1,-1))"
+    "yyyy = scaler.inverse_transform(y_pred_numpy.reshape(1, -1))"
    ]
   },
   {
@@ -560,11 +562,13 @@
    ],
    "source": [
     "f_map = lambda tensor: tensor.to(\"cpu\").numpy().flatten().tolist()\n",
-    "a = list(map(f_map,proximos))\n",
+    "a = list(map(f_map, proximos))\n",
     "from functools import reduce\n",
+    "\n",
     "f_reduce = lambda old, new: old + new\n",
     "aa = reduce(f_reduce, a, [])\n",
     "from matplotlib import pyplot as plt\n",
+    "\n",
     "plt.plot(aa)\n",
     "plt.show()"
    ]
@@ -690,9 +694,8 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "\n",
-    "torch.Tensor(np.array(1, dtype= np.float32).reshape(1,1)).to(device)"
+    "torch.Tensor(np.array(1, dtype=np.float32).reshape(1, 1)).to(device)"
    ]
   },
   {
@@ -1732,7 +1735,7 @@
     }
    ],
    "source": [
-    "torch.Tensor([1], size=[1,1]).shape"
+    "torch.Tensor([1], size=[1, 1]).shape"
    ]
   },
   {
