--- a/notebooks/02_criando_dados_treino_teste.ipynb
+++ b/notebooks/02_criando_dados_treino_teste.ipynb
@@ -7,12 +7,13 @@
    "outputs": [],
    "source": [
     "# Bibliotecas\n",
+    "import pickle\n",
+    "\n",
+    "import joblib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "import pickle\n",
-    "import joblib\n",
     "\n",
     "from src.utils import get_path_projeto\n",
     "\n",
@@ -50,13 +51,13 @@
     "wind_power_generation_scaled_values = scaler.fit_transform(wind_power_generation_values.reshape(-1, 1)).ravel()\n",
     "\n",
     "# 5. Criando os dados de \"features\" e \"target\"\n",
-    "window_len = 6 # Número de pontos que existem por meia hora\n",
+    "window_len = 6  # Número de pontos que existem por meia hora\n",
     "X = []\n",
     "y = []\n",
     "\n",
     "for i in range(len(wind_power_generation_scaled_values) - window_len):\n",
-    "    X.append(wind_power_generation_scaled_values[i:i+window_len])\n",
-    "    y.append(wind_power_generation_scaled_values[i+window_len])\n",
+    "    X.append(wind_power_generation_scaled_values[i:i + window_len])\n",
+    "    y.append(wind_power_generation_scaled_values[i + window_len])\n",
     "\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
@@ -66,10 +67,10 @@
     "\n",
     "# 7. Salvando para uso futuro\n",
     "\n",
-    "## Scaler\n",
+    "# Scaler\n",
     "joblib.dump(scaler, dir_models / \"min_max_scaler.joblib\")\n",
     "\n",
-    "## Dados de treino e teste\n",
+    "# Dados de treino e teste\n",
     "train_test_data = {\n",
     "    \"X\": {\n",
     "        \"raw\": X,\n",
